  src/
    drivers/assistedhuman/
            assistedhuman.cpp
            CmakeList.txt
            Driver.cpp
            Driver.h
    libs/tgfclient/
            GuiRadioButton.cpp
            GuiRadioButtonList.cpp
    modules/userinterface/legacymenu/mainscreens/
            ResearcherMenu.h
            ResearcherMenu.cpp
            DataSelectionMenu.h
            DataSelectionMenu.cpp
            DataSettingsMenu.h
            DataSettingsMenu.cpp
            DeveloperMenu.h
            DeveloperMenu.cpp 
            EndExperimentMenu.cpp
            EndExperimentMenu.h
  data/
    data/
        config/
            raceman/
                replay.xml
        img/
            radio-checked.png
            radio-checked-focused.png
            radio-unchecked.png
            radio-unchecked-focused.png
            checked-focused.png
            unchecked-focused.png
        indicators/
            *
        menu/
            ResearcherMenu.xml
            DataSelectionMenu.xml
            DeveloperMenu.xml
            EndExperimentMenu.xml
    drivers/
        assistedhuman/
            *

Changed:
  src/
    libs/
        robottools/
            humandriver.h
                included Recorder.h
                added m_recorder
                added SetRecorder
            rthumandriver.cpp
                changed new_race()
                changed drive_at()
                changed shutdown()
                changed common_drive(): added check for input of intervention toggle on/off
                added   SetRecorder()
                added   m_prevIntervention member
                added   NO_KEYBOARD define: clarify magic number
            CMakeLists.txt
                changed frontend added to ADD_SDLIB_INCLUDEDIR
                changed backend added to ADD_SDLIB_INCLUDEDIR
                changed frontend added to ADD_SDLIB_LIBRARY
                changed backend added to ADD_SDLIB_LIBRARY
        tgf/
            params.cpp